CSD5: Sonar in build (#5)
* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build with first unit test

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Sonar in build

* CSD5: Resolved sonar issue